kubernetes-volumes/ingress-cm.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingess-cm
  namespace: homework
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: homework.otus
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-svc
                port:
                  number: 8080
